@@ -1,0 +1,104 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>angle</key>
+	<real>90</real>
+	<key>angleVariance</key>
+	<real>360</real>
+	<key>blendAdditive</key>
+	<real>1</real>
+	<key>blendFuncDestination</key>
+	<integer>1</integer>
+	<key>blendFuncSource</key>
+	<integer>770</integer>
+	<key>duration</key>
+	<real>-1</real>
+	<key>emitterType</key>
+	<real>0.0</real>
+	<key>finishColorAlpha</key>
+	<real>1</real>
+	<key>finishColorBlue</key>
+	<real>0.0</real>
+	<key>finishColorGreen</key>
+	<real>0.0</real>
+	<key>finishColorRed</key>
+	<real>0.0</real>
+	<key>finishColorVarianceAlpha</key>
+	<real>0.0</real>
+	<key>finishColorVarianceBlue</key>
+	<real>0.0</real>
+	<key>finishColorVarianceGreen</key>
+	<real>0.0</real>
+	<key>finishColorVarianceRed</key>
+	<real>0.0</real>
+	<key>finishParticleSize</key>
+	<real>30</real>
+	<key>finishParticleSizeVariance</key>
+	<real>0.0</real>
+	<key>gravityx</key>
+	<real>0.0</real>
+	<key>gravityy</key>
+	<real>0.0</real>
+	<key>maxParticles</key>
+	<real>250</real>
+	<key>maxRadius</key>
+	<real>276.20999145507812</real>
+	<key>maxRadiusVariance</key>
+	<real>154.94999694824219</real>
+	<key>minRadius</key>
+	<real>0.0</real>
+	<key>particleLifespan</key>
+	<real>4</real>
+	<key>particleLifespanVariance</key>
+	<real>1</real>
+	<key>radialAccelVariance</key>
+	<real>0.0</real>
+	<key>radialAcceleration</key>
+	<real>-60</real>
+	<key>rotatePerSecond</key>
+	<real>35.529998779296875</real>
+	<key>rotatePerSecondVariance</key>
+	<real>0.0</real>
+	<key>sourcePositionVariancex</key>
+	<real>0.0</real>
+	<key>sourcePositionVariancey</key>
+	<real>0.0</real>
+	<key>sourcePositionx</key>
+	<real>169.91000366210938</real>
+	<key>sourcePositiony</key>
+	<real>228.71000671386719</real>
+	<key>speed</key>
+	<real>80</real>
+	<key>speedVariance</key>
+	<real>10</real>
+	<key>startColorAlpha</key>
+	<real>1</real>
+	<key>startColorBlue</key>
+	<real>0.5</real>
+	<key>startColorGreen</key>
+	<real>0.5</real>
+	<key>startColorRed</key>
+	<real>0.5</real>
+	<key>startColorVarianceAlpha</key>
+	<real>0.0</real>
+	<key>startColorVarianceBlue</key>
+	<real>0.5</real>
+	<key>startColorVarianceGreen</key>
+	<real>0.5</real>
+	<key>startColorVarianceRed</key>
+	<real>0.5</real>
+	<key>startParticleSize</key>
+	<real>30</real>
+	<key>startParticleSizeVariance</key>
+	<real>10</real>
+	<key>tangentialAccelVariance</key>
+	<real>0.0</real>
+	<key>tangentialAcceleration</key>
+	<real>15</real>
+	<key>textureFileName</key>
+	<string>Flower.png</string>
+	<key>textureImageData</key>
+	<string>H4sIAAAAAAAAAwGaBGX7iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAQAAADZc7J/AAAA5mlDQ1BJQ0MgUHJvZmlsZQAAeAFjYGCsSCwoyGESYGDIzSspcg9yjIyIjFJgv8rAzsDIAAaJycUFjgEBPhAeNvLbNYjay7ogs2ad1vz46kTgxG2Ka/z0r9ZuwKYDSYwlJbU4GcjfAsSlyQVFJQwMjDpAtnp2SJAzkB0CZPOVlxSAxFOAbBGoeiCTQdo5MSczqSixJDVFwb0osVLBOT8nv6i4IDE5FSRNXVCSWgF0AwODc35BZVFmekaJgiPQt6lAO3MLSktSi3QUPPOS9RgYkkuLyqA2MzIZMzCAwhPC/xwIDidGsTMAFkw91gWJ+yQAAANvSURBVEgNxZU7aFRREIb/uXnsZpPoxoAYxBSBKKaIKBYiqF0awTQ2iqiNoqCFnWJpkSiCFoIgIgqWKoqCxEJQQSIWBgmI+GgsBDVmNZvdTTbZ8Z85d+/mCYKFZ2DZe8/MN3PmzMwF/nHJcvaaQgShKKUiU8vpLQGgaQPqKXUJYBYzlPJSmKhK1pP2Txu1BS1oxUpKFm0uWX9qRYu2aON8fdBPvPRF5Zt0Ik1pQorSGMegMP/TmKIUUdJISnT0DX3BMAFEI3oW37EDBWSISBMRDhEAUyjR3I4W6Wod1ZPRyAKApnEX2/EGu2OExWBZMID5LxLZwDdr8Fquyq1q5HESebaMn/0y+vSY5PmUdn8GYProv4BJ5NGq9+QBDqMg0wFRBVjqVniyzuk2uYl3SwDy6NVTeCrH8Rt5OvHlAF5cMM8y81m9hCy9fPaQLYKyH2ASG/QgxmQvcvjlCK+NAAgXFy6tDSv0NFrlGb4yCxEqzECR4XfqHuTkBMZdfmEixBDqoJ6qKb/ADE/fzBQVdBd60O6yitWwieYTMpDckF2yLwJ4AKs7QxjE6qBZnmBKe9FFgJmv1x2YlOu+W62RetpxGSfi5RjCIA2UFBEZeaubdR2DnkC9dqAkD/neds23SR3tYoC1jEFMbMuUGIt81bWS1SZJsQteOTwYml5oNPcObxmD1CQKUUmRmymdlQ98DiY1HfsXA6xh50uFubcOoIpC6thc9ma+jj3NAZiBibetl26JZ8/Q+xedYS7a+K7su0Ev4GJA8GamphTKpoBmpq4s75nGN34jHSwn2512zAydVeIIOCaCsTVsybtuEu3aw8y/xBh+Ylwee110+a5pOSSMl1BIod+tYQveNJ1+7/dpbmKIG5jQfmzkLmdCjLAAmFtbFpg1bOi4DV5112g4hh8OyOG3DCKnh7HFERZD2S3DVTDXtW7crBd47gFWnY2Pue2c14vSjkMYXtSNBFTnQRceYRSDy86D87pFtuLTonlARJpG3TosQ25uc3HhRAoHHNB+6ZaP4QBWhcnSJi3IPZxJOm7xTLQUF3BF90WJXTJUyfkpR3CHZ7cBtuxU5uXu1yEtSlPwnJD0Gm7Lc+bCGsl+rXGs/vldiuvEbmo6zELdiQNy1BAJoFIXzQbm332ZqvoJIBjXfon5q29jzeJ//fsDttmrmko6AygAAAAASUVORK5CYIJuAiUFmgQAAA==</string>
+</dict>
+</plist>
