@@ -160,9 +160,9 @@
 				
 		
 		emitterMode_ = [[dictionary valueForKey:@"emitterType"] intValue];
-		
+
+		// Mode A: Gravity + tangential accel + radial accel
 		if( emitterMode_ == kCCParticleModeGravity ) {
-			// Mode A: Gravity + tangential accel + radial accel
 			// gravity
 			mode.A.gravity.x = [[dictionary valueForKey:@"gravityx"] floatValue];
 			mode.A.gravity.y = [[dictionary valueForKey:@"gravityy"] floatValue];
@@ -172,7 +172,13 @@
 			mode.A.speed = [[dictionary valueForKey:@"speed"] floatValue];
 			mode.A.speedVar = [[dictionary valueForKey:@"speedVariance"] floatValue];
 			
-			// radial & tangential accel should be supported as well by Particle Designer
+			// radial acceleration
+			mode.A.radialAccel = [[dictionary valueForKey:@"radialAcceleration"] floatValue];
+			mode.A.radialAccelVar = [[dictionary valueForKey:@"radialAccelVariance"] floatValue];
+			
+			// tangential acceleration
+			mode.A.tangentialAccel = [[dictionary valueForKey:@"tangentialAcceleration"] floatValue];
+			mode.A.tangentialAccelVar = [[dictionary valueForKey:@"tangentialAccelVariance"] floatValue];
 		}
 		
 		
